Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ hr {
 
 .container {
 	width:100%;
+	margin-top: -20%;
+	padding-bottom: 50%;
 }
 .text-center {
 	text-align: center;
@@ -22,7 +24,7 @@ hr {
 }
 
 .content {
-	margin: 20% 0 20% 0;
+	margin: 20% 0 30% 0;
 }
 
 h1 {
